added exception handlings, Main Class to test the code